--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         </a>
         <ul class="site-nav">
             <li>
-                <a href="./index.html">Studio</a>
+                <a href="./index.html" class="site-item">Studio</a>
             </li>
             <li>
-                <a href="./portfolio.html">Portfolio</a>
+                <a href="./portfolio.html" class="site-item">Portfolio</a>
             </li>
             <li>
-                <a href="">Contacts</a>
+                <a href="" class="site-item">Contacts</a>
             </li>
         </ul>  
     </nav> 
@@ -40,12 +40,21 @@
 <main>
 <!--Hero-->
             <section class="hero">
-                <div class="container">
+            <div class="container">
                 <h1 class="hero-tittle">Effective Solutions for Your Business</h1>
-                <button type="button" class="hero-button">
+                <button type="button" class="hero-button" data-modal-open>
                     Order Service
                 </button>
             </div>
+            <div class="backdrop is-hidden" data-modal>
+                <div class="modal">
+                     <button type="button" class="close-hero" data-modal-close>
+                        <svg class="modal-close-bottom-icon">
+                            <use href="./images/icons.svg#icon-close"></use>
+                        </svg>
+                     </button>   
+                </div>
+            </div> 
             </section>
 <!--Company's quality-->
         <section class="quality-section">
@@ -347,5 +356,6 @@
         </div>
         </div>
     </footer>
+    <script src="./js/modal.js"></script>
 </body>
 </html>
