--- a/portfolio.html
+++ b/portfolio.html
@@ -13,29 +13,29 @@
 <body>
 <!--Logo and nav-->
 <header class="page-header">
-<div class="container header-container">
-    <nav class="header-nav">
-        <a href="./index.html" class="logo">
-            <span>Web</span>Studio
-        </a>
-        <ul class="site-nav">
-            <li>
-                <a href="./index.html">Studio</a>
-            </li>
-            <li>
-                <a href="./portfolio.html">Portfolio</a>
-            </li>
-            <li>
-                <a href="">Contacts</a>
-            </li>
-        </ul> 
-    </nav>    
-        <ul class="auth-nav">
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+11000111-11-11 ">+11 (000) 111-11-11</a></li>
-        </ul>  
-</div>
-</header>
+    <div class="container header-container"> 
+        <nav class="header-nav">
+            <a href="./index.html" class="logo">
+                <span>Web</span>Studio
+            </a>
+            <ul class="site-nav">
+                <li>
+                    <a href="./index.html" class="site-item">Studio</a>
+                </li>
+                <li>
+                    <a href="./portfolio.html" class="site-item">Portfolio</a>
+                </li>
+                <li>
+                    <a href="" class="site-item">Contacts</a>
+                </li>
+            </ul>  
+        </nav> 
+            <ul class="auth-nav">
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+11000111-11-11 ">+11 (000) 111-11-11</a></li>
+            </ul>      
+    </div>
+    </header>
 
 
  <main>
@@ -62,85 +62,148 @@
     <!--About work-->
         <ul class="portfolio-works">
             <li class="work-image">
-                <a href=""> 
-                    <img src="./images/work.png" alt="photo for portfolio" width="360" height="300" class="photo">
-                    <div class="portfolio-photo">
+                <div class="work-item">
+                    <a href=""> 
+                        <img src="./images/work.png" alt="photo for portfolio" width="360" height="300" class="photo">
+                    </a>
+                    <div class="image-text">
+                        <p>
+                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                        </p>
+                    </div>
+                </div>
+                <div class="portfolio-photo">
                     <h3 class="work-tittle">Banking App Interface Concept</h3>
                     <p class="work-type">App</p>
-                    </div>
-                </a> 
+                </div> 
             </li>
             <li class="work-image">
-                <a href="">
-                    <img src="./images/work1.png" alt="photo for portfolio" width="360" height="300" class="photo">
-                    <div class="portfolio-photo">
+                <div class="work-item">
+                    <a href="">
+                        <img src="./images/work1.png" alt="photo for portfolio" width="360" height="300" class="photo">
+                    </a>
+                    <div class="image-text">
+                        <p>
+                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                        </p>
+                    </div>
+                </div>
+                <div class="portfolio-photo">
                     <h3 class="work-tittle">Cashless Payment</h3>
                     <p class="work-type">Marketing</p>   
-                    </div>
-                </a> 
+                </div> 
             </li>
             <li class="work-image">
-                <a href="">
-                    <img src="./images/work2.png" alt="photo for portfolio" width="360" height="300" class="photo">
-                    <div class="portfolio-photo">
+                <div class="work-item">
+                    <a href="">
+                        <img src="./images/work2.png" alt="photo for portfolio" width="360" height="300" class="photo">  
+                    </a>
+                    <div class="image-text">
+                        <p>
+                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                        </p>
+                    </div>
+                </div>
+                <div class="portfolio-photo">
                     <h3 class="work-tittle">Meditaion App</h3>
                     <p class="work-type">App</p>
-                    </div>
-                </a>  
+                </div>  
             </li>
             <li class="work-image">
-                <a href="">
-                    <img src="./images/work3.png" alt="photo for portfolio" width="360" height="300" class="photo">
-                    <div class="portfolio-photo">
+                <div class="work-item">
+                    <a href="">
+                        <img src="./images/work3.png" alt="photo for portfolio" width="360" height="300" class="photo">
+                    </a>
+                    <div class="image-text">
+                        <p>
+                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                        </p>
+                    </div>
+                </div>
+                <div class="portfolio-photo">
                     <h3 class="work-tittle">Taxi Service</h3>
                     <p class="work-type">Marketing</p>  
-                    </div>
-                </a>
+                </div>
             </li>
             <li class="work-image">
-                <a href="">
-                    <img src="./images/work4.png" alt="photo for portfolio" width="360" height="300" class="photo">
-                    <div class="portfolio-photo">
+                <div  class="work-item">
+                    <a href="">
+                        <img src="./images/work4.png" alt="photo for portfolio" width="360" height="300" class="photo">
+                    </a>
+                    <div class="image-text">
+                        <p>
+                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                        </p>
+                    </div>
+                </div>
+                <div class="portfolio-photo">
                     <h3 class="work-tittle">Screen Illustrations</h3>
                     <p class="work-type">Design</p>
-                    </div>
-                </a> 
+                </div>
             </li>
             <li class="work-image">
-                <a href="">
-                    <img src="./images/work5.png" alt="photo for portfolio" width="360" height="300" class="photo">
-                    <div class="portfolio-photo">
+                <div class="work-item">
+                    <a href="">
+                        <img src="./images/work5.png" alt="photo for portfolio" width="360" height="300" class="photo">
+                    </a>
+                    <div class="image-text">
+                        <p>
+                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                        </p>
+                    </div>
+                </div>   
+                <div class="portfolio-photo">
                     <h3 class="work-tittle">Online Courses</h3>
                     <p class="work-type">Marketing</p>  
-                    </div>
-                </a>
+                </div>
             </li>
             <li class="work-image">
-                <a href="">
-                    <img src="./images/work6.png" alt="photo for portfolio" width="360" height="300" class="photo">
-                    <div class="portfolio-photo">
+                <div class="work-item">
+                    <a href="">
+                        <img src="./images/work6.png" alt="photo for portfolio" width="360" height="300" class="photo">
+                    </a>
+                    <div class="image-text">
+                        <p>
+                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                        </p>
+                    </div>
+                </div>
+                <div class="portfolio-photo">
                     <h3 class="work-tittle">Instagram Stories Concept</h3>
                     <p class="work-type">Design</p>  
-                    </div>
-                </a>  
+                </div>
             </li>
             <li class="work-image">
-                <a href="">
-                    <img src="./images/work7.png" alt="photo for portfolio" width="360" height="300" class="photo">
-                    <div class="portfolio-photo">
+                <div class="work-item">
+                    <a href="">
+                        <img src="./images/work7.png" alt="photo for portfolio" width="360" height="300" class="photo">
+                    </a>
+                    <div class="image-text">
+                        <p>
+                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                        </p>
+                    </div>
+                </div>  
+                <div class="portfolio-photo">
                     <h3 class="work-tittle">Organic Food</h3>
                     <p class="work-type">Web Site</p> 
-                    </div>
-                </a>  
+                </div>
             </li>
             <li class="work-image">
-                <a href="">
-                    <img src="./images/work8.png" alt="photo for portfolio" width="360" height="300" class="photo">
-                    <div class="portfolio-photo">
+                <div class="work-item">
+                    <a href="">
+                        <img src="./images/work8.png" alt="photo for portfolio" width="360" height="300" class="photo">
+                    </a>
+                    <div class="image-text">
+                        <p>
+                            14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                        </p>
+                    </div>    
+                </div>
+                <div class="portfolio-photo">
                     <h3 class="work-tittle">Fresh Coffee</h3>
                     <p class="work-type">Web Site</p>    
-                    </div>
-                </a>
+                </div>
             </li>
         </ul>
         </div>
