--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,7 @@
                     <a href=""> 
                         <img src="./images/work.png" alt="photo for portfolio" width="360" height="300" class="photo">
                     </a>
-                    <div class="image-text">
+                    <div class="overlay">
                         <p>
                             14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                         </p>
@@ -82,7 +82,7 @@
                     <a href="">
                         <img src="./images/work1.png" alt="photo for portfolio" width="360" height="300" class="photo">
                     </a>
-                    <div class="image-text">
+                    <div class="overlay">
                         <p>
                             14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                         </p>
@@ -98,7 +98,7 @@
                     <a href="">
                         <img src="./images/work2.png" alt="photo for portfolio" width="360" height="300" class="photo">  
                     </a>
-                    <div class="image-text">
+                    <div class="overlay">
                         <p>
                             14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                         </p>
@@ -114,7 +114,7 @@
                     <a href="">
                         <img src="./images/work3.png" alt="photo for portfolio" width="360" height="300" class="photo">
                     </a>
-                    <div class="image-text">
+                    <div class="overlay">
                         <p>
                             14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                         </p>
@@ -130,7 +130,7 @@
                     <a href="">
                         <img src="./images/work4.png" alt="photo for portfolio" width="360" height="300" class="photo">
                     </a>
-                    <div class="image-text">
+                    <div class="overlay">
                         <p>
                             14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                         </p>
@@ -146,7 +146,7 @@
                     <a href="">
                         <img src="./images/work5.png" alt="photo for portfolio" width="360" height="300" class="photo">
                     </a>
-                    <div class="image-text">
+                    <div class="overlay">
                         <p>
                             14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                         </p>
@@ -162,7 +162,7 @@
                     <a href="">
                         <img src="./images/work6.png" alt="photo for portfolio" width="360" height="300" class="photo">
                     </a>
-                    <div class="image-text">
+                    <div class="overlay">
                         <p>
                             14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                         </p>
@@ -178,7 +178,7 @@
                     <a href="">
                         <img src="./images/work7.png" alt="photo for portfolio" width="360" height="300" class="photo">
                     </a>
-                    <div class="image-text">
+                    <div class="overlay">
                         <p>
                             14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                         </p>
@@ -194,7 +194,7 @@
                     <a href="">
                         <img src="./images/work8.png" alt="photo for portfolio" width="360" height="300" class="photo">
                     </a>
-                    <div class="image-text">
+                    <div class="overlay">
                         <p>
                             14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                         </p>
