--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                 <li class="customer-item">
                     <a href="" class="customer-link">
                         <svg class="customer-icon" width="104" height="56">
-                            <use href="./images/icons.svg#customer1"></use>
+                            <use href="./images/icons.svg#icon-customer1"></use>
                         </svg>
                     </a>
                 </li>
