--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <span>Web</span>Studio
         </a>
         <ul class="site-nav">
-            <li>
+            <li class="current">
                 <a href="./index.html" class="site-item">Studio</a>
             </li>
             <li>
