--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
                 <li>
                     <a href="./index.html" class="site-item">Studio</a>
                 </li>
-                <li>
+                <li class="current">
                     <a href="./portfolio.html" class="site-item">Portfolio</a>
                 </li>
                 <li>
