--- a/portfolio.html
+++ b/portfolio.html
@@ -20,13 +20,13 @@
             </a>
             <ul class="site-nav">
                 <li>
-                    <a href="./index.html" class="site-item">Studio</a>
+                    <a href="./index.html" class="site-item header-link">Studio</a>
                 </li>
                 <li class="current">
-                    <a href="./portfolio.html" class="site-item">Portfolio</a>
+                    <a href="./portfolio.html" class="site-item header-link">Portfolio</a>
                 </li>
                 <li>
-                    <a href="" class="site-item">Contacts</a>
+                    <a href="" class="site-item site-contacts">Contacts</a>
                 </li>
             </ul>  
         </nav> 
