--- a/index.html
+++ b/index.html
@@ -118,28 +118,28 @@
                             <li class="worker-soc-item">
                                 <a href="" class="worker-soc-link">
                                     <svg class="worker-soc-icon" width="16" height="16">
-                                        <use href="./images/icons.svg#icon1"></use>
+                                        <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="worker-soc-item">
                                 <a href="" class="worker-soc-link">
                                     <svg class="worker-soc-icon" width="16" height="16" >
-                                        <use href="./images/icons.svg#icon2"></use>
+                                        <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="worker-soc-item">
                                 <a href="" class="worker-soc-link">
                                     <svg class="worker-soc-icon" width="16" height="16" >
-                                        <use href="./images/icons.svg#icon3"></use>
+                                        <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="worker-soc-item">
                                 <a href="" class="worker-soc-link">
                                     <svg class="worker-soc-icon" width="16" height="16" >
-                                        <use href="./images/icons.svg#icon4"></use>
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -155,28 +155,28 @@
                             <li class="worker-soc-item">
                                 <a href="" class="worker-soc-link">
                                     <svg class="worker-soc-icon" width="16" height="16" >
-                                        <use href="./images/icons.svg#icon1"></use>
+                                        <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="worker-soc-item">
                                 <a href="" class="worker-soc-link">
                                     <svg class="worker-soc-icon" width="16" height="16" >
-                                        <use href="./images/icons.svg#icon2"></use>
+                                        <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="worker-soc-item">
                                 <a href="" class="worker-soc-link">
                                     <svg class="worker-soc-icon" width="16" height="16" >
-                                        <use href="./images/icons.svg#icon3"></use>
+                                        <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="worker-soc-item">
                                 <a href="" class="worker-soc-link">
                                     <svg class="worker-soc-icon" width="16" height="16" >
-                                        <use href="./images/icons.svg#icon4"></use>
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -192,28 +192,28 @@
                             <li class="worker-soc-item">
                                 <a href="" class="worker-soc-link">
                                     <svg class="worker-soc-icon" width="16" height="16" >
-                                        <use href="./images/icons.svg#icon1"></use>
+                                        <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="worker-soc-item">
                                 <a href="" class="worker-soc-link">
                                     <svg class="worker-soc-icon" width="16" height="16" >
-                                        <use href="./images/icons.svg#icon2"></use>
+                                        <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="worker-soc-item">
                                 <a href="" class="worker-soc-link">
                                     <svg class="worker-soc-icon" width="16" height="16" >
-                                        <use href="./images/icons.svg#icon3"></use>
+                                        <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="worker-soc-item">
                                 <a href="" class="worker-soc-link">
                                     <svg class="worker-soc-icon" width="16" height="16" >
-                                        <use href="./images/icons.svg#icon4"></use>
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -229,28 +229,28 @@
                             <li class="worker-soc-item">
                                 <a href="" class="worker-soc-link">
                                     <svg class="worker-soc-icon" width="16" height="16" >
-                                        <use href="./images/icons.svg#icon1"></use>
+                                        <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="worker-soc-item">
                                 <a href="" class="worker-soc-link">
                                     <svg class="worker-soc-icon" width="16" height="16" >
-                                        <use href="./images/icons.svg#icon2"></use>
+                                        <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="worker-soc-item">
                                 <a href="" class="worker-soc-link">
                                     <svg class="worker-soc-icon" width="16" height="16" >
-                                        <use href="./images/icons.svg#icon3"></use>
+                                        <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="worker-soc-item">
                                 <a href="" class="worker-soc-link">
                                     <svg class="worker-soc-icon" width="16" height="16" >
-                                        <use href="./images/icons.svg#icon4"></use>
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -261,54 +261,54 @@
         </div>
         </section>
 <!-- Customer -->
-        <section class="customer">
+        <section class="customers">
             <div class="container">
-            <h2 class="section-tittle">Customer</h2>
-            <ul class="customer-list">
-                <li class="customer-item">
-                    <a href="" class="customer-link">
-                        <svg class="customer-icon" width="104" height="56">
-                            <use href="./images/icons.svg#customer1"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="customer-item">
-                    <a href="" class="customer-link">
-                        <svg class="customer-icon" width="104" height="56">
-                            <use href="./images/icons.svg#customer2"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li  class="customer-item">
-                    <a href="" class="customer-link">
-                        <svg class="customer-icon" width="104" height="56">
-                            <use href="./images/icons.svg#customer3"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li class="customer-item">
-                    <a href="" class="customer-link">
-                        <svg class="customer-icon" width="104" height="56">
-                            <use href="./images/icons.svg#customer4"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li  class="customer-item">
-                    <a href="" class="customer-link">
-                        <svg class="customer-icon" width="104" height="56">
-                            <use href="./images/icons.svg#customer5"></use>
-                        </svg>
-                    </a>
-                </li>
-                <li  class="customer-item">
-                    <a href="" class="customer-link">
-                        <svg class="customer-icon" width="104" height="56">
-                            <use href="./images/icons.svg#customer6"></use>
-                        </svg>
-                    </a>
-                </li>
-            </ul>
-            </div>
+                <h2 class="section-title">Customers</h2>
+                <ul class="customers-content list">
+                    <li class="customers-banner">
+                        <a href="" class="customers-link">
+                            <svg class="customers-logo" width="104" height="56">
+                                <use href="./imаges/icons.svg#icon-Logo-1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customers-banner">
+                        <a href="" class="customers-link">
+                            <svg class="customers-logo">
+                                <use href="./imаges/icons.svg#icon-Logo-2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customers-banner">
+                        <a href="" class="customers-link">
+                            <svg class="customers-logo">
+                                <use href="./imаges/icons.svg#icon-Logo-3"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customers-banner">
+                        <a href="" class="customers-link">
+                            <svg class="customers-logo">
+                                <use href="./imаges/icons.svg#icon-Logo-4"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customers-banner">
+                        <a href="" class="customers-link">
+                            <svg class="customers-logo">
+                                <use href="./imаges/icons.svg#icon-Logo-5"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="customers-banner">
+                        <a href="" class="customers-link">
+                            <svg class="customers-logo">
+                                <use href="./imаges/icons.svg#icon-Logo-6"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div >
         </section>
 </main>
 
@@ -327,28 +327,28 @@
                 <li class="site-soc-item">
                     <a href="" class="site-soc-link">
                         <svg class="site-soc-icon" width="24" height="24">
-                            <use href="./images/icons.svg#icon1"></use>
+                            <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="site-soc-item"> 
                     <a href="" class="site-soc-link">
                         <svg class="site-soc-icon" width="24" height="24">
-                            <use href="./images/icons.svg#icon2"></use>
+                            <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="site-soc-item">
                     <a href="" class="site-soc-link">
                         <svg class="site-soc-icon" width="24" height="24">
-                            <use href="./images/icons.svg#icon3"></use>
+                            <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="site-soc-item">
                     <a href="" class="site-soc-link">
                         <svg class="site-soc-icon" width="24" height="24">
-                            <use href="./images/icons.svg#icon4"></use>
+                            <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                     </a>
                 </li>
